--- a/src/styles/tictactoe/style.css
+++ b/src/styles/tictactoe/style.css
@@ -1,3 +1,10 @@
+.tictactoe-mainbody {
+  height: 100vh;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 .square {
   color: black;
   background: #fff;
