--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,8 +4,13 @@
 
 html {
   scroll-behavior: smooth;
+  scroll-padding: var(--scroll-padding, 7rem);
 }
 a, p {
   font-family: 'PF Tempesta Five Condensed';
+}
+
+.navBarTransitionEffectClass {
+  transition: all 0.5s ease;
 }
 
