--- a/src/styles/portfolio/style.css
+++ b/src/styles/portfolio/style.css
@@ -1,3 +1,14 @@
+html {
+    color-scheme: dark light;
+}
+
+:root {
+    --background: #64748b;
+    --nav-bar-text: #000000;
+    --nav-bar-background: #475569
+}
+
+
 .main-body {
     height: 100vh;
     padding: 0;
