--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,11 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
- 
-/* * {
+/*
+ * {
   border: 1px solid black;
-} */
-
+} 
+*/
 
 @layer base {
   :root {
@@ -77,4 +77,16 @@ html {
   body {
     @apply bg-background text-foreground;
   }
+}
+
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+      display: none;
+  }
+ /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+      -ms-overflow-style: none;  /* IE and Edge */
+      scrollbar-width: none;  /* Firefox */
+}
 }
